reportingSystem/superset/kubernetes/superset-prod-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: superset-prod
  labels:
    environment: prod
    app: superset
