reportingSystem/superset/kubernetes/superset-prod-deployment.yml
kind: Deployment

apiVersion: apps/v1

metadata:
  name: supersetdeployment
  namespace: superset-prod
  labels:
    environment: prod
    app: superset
  annotations:
    kubernetes.io/autoupdate-spec: "work for superset 4.0.1"    # need to change in every deployment
spec:
  replicas: 2
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      environment: prod
      app: superset
  template:
    metadata:
      name: supersetpod
      labels:
        environment: prod
        app: superset
    spec:
      nodeSelector:
        environment: prod
        app: superset
      containers:
        - name: supersetcontainer
          image: public.ecr.aws/m1p7h9p1/avniproject/reporting-superset:4.0.1    # need to change after setting up avni
