reportingSystem/superset/kubernetes/ingress-controller.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: avni-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: ""             # give host name
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: superset-prod-proxy
                port:
                  number: 8088
